fix news div to full width

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -98,21 +98,19 @@
 
   <section id="aboutus" class="container services">
     <div class="row">
-      <div class="col-sm-4">
-        <h2>Чанар</h2>
-        <p>Бид чанар стандартын шаардлага хангасан түүхий эдээр бат бөх, баталгаат хугацаа бүхий бүтээгдэхүүн үйлдвэрлэнэ.</p>
-        <p><a class="navy-link" href="#" role="button">... »</a></p>
+      <div class="col-lg-12 text-center">
+        <div class="navy-line"></div>
+        <h1>Бидний тухай<br></h1>
+        <p>Орчин үеийн. Мэргэжлийн инженерийн тооцоолол. </p>
       </div>
-      <div class="col-sm-4">
-        <h2>Туршлага</h2>
-        <p>Бид салбартаа 20-иод жилийн туршлагатай, анхдагч төмөр хийцийн үйлдвэрүүдийн нэг билээ.</p>
-        <p><a class="navy-link" href="#" role="button">... »</a></p>
-      </div>
-      <div class="col-sm-4">
-        <h2>Итгэл найдвар</h2>
-        <p>Бид бүтээгдэхүүнээ түргэн шуурхай гүйцэтгэж, таны итгэл найдвартай түнш, хамтрагч байж чадна.</p>
-        <p><a class="navy-link" href="#" role="button">... »</a></p>
-      </div>
+    </div>
+    <div class="row">
+      <p>
+        “Гуулин Дөш” ХХК нь анх 2007 онд төмөр хийцийн үйлдвэрлэл чиглэлээр байгуулагдаж, өдгөө 13 жилийн турш үйл ажиллагаагаа тасралтгүй явуулж байна.
+        Энэ хугацаанд хувь хүн болон албан байгууллагын захиалгын бүх төрлийн төмөр хийцийн ажлыг архитекторын зураг төсөв,
+        тооцоон дээр үндэслэн мэргэжлийн инженер техникийн ажилтнуудын ур чадвараар улс орны хөгжил цэцэглэлтэнд хувь нэмрээ оруулж,
+        олон сайхан нэр хүнд бүхий ажлуудыг амжилттай хийж гүйцэтгэж ирсэн.
+      </p>
     </div>
   </section>
 
@@ -120,21 +118,26 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <div class="navy-line"></div>
-        <h1>Бидний тухай<br> <span class="navy">Биднийг сонгох шалтгаан+</span> </h1>
+        <h1>Биднийг сонгох шалтгаан<br> <span class="navy">+</span> </h1>
         <p>Орчин үеийн. Мэргэжлийн инженерийн тооцоолол. </p>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-3 text-center wow fadeInLeft animated" style="visibility: visible; animation-name: fadeInLeft;">
-        <div>
-          <i class="fa fa-mobile features-icon"></i>
-          <h2>Загвар</h2>
-          <p>Мэргэжлийн архитекторын шийдлээр санал болгох загвар дизайн, өнгө будаг бүхий бүтээгдэхүүн.</p>
+      <div class="col-md-3 text-center wow fadeInRight animated" style="visibility: visible; animation-name: fadeInRight;">
+        <div class="m-t-lg">
+          <h2>Чанар</h2>
+          <p>Бид чанар стандартын шаардлага хангасан түүхий эдээр бат бөх, баталгаат хугацаа бүхий бүтээгдэхүүн үйлдвэрлэнэ.</p>
+          <p><a class="navy-link" href="#" role="button">... »</a></p>
         </div>
         <div class="m-t-lg">
-          <i class="fa fa-bar-chart features-icon"></i>
-          <h2>Технологи</h2>
-          <p>Орчин үеийн тоног төхөөрөмжөөр мэргэжлийн инженер техникийн ажилтнууд зөвхөн танд зориулсан  бүтээгдэхүүнийг урлана.</p>
+          <h2>Туршлага</h2>
+          <p>Бид салбартаа 20-иод жилийн туршлагатай, анхдагч төмөр хийцийн үйлдвэрүүдийн нэг билээ.</p>
+          <p><a class="navy-link" href="#" role="button">... »</a></p>
+        </div>
+        <div class="m-t-lg">
+          <h2>Итгэл найдвар</h2>
+          <p>Бид бүтээгдэхүүнээ түргэн шуурхай гүйцэтгэж, таны итгэл найдвартай түнш, хамтрагч байж чадна.</p>
+          <p><a class="navy-link" href="#" role="button">... »</a></p>
         </div>
       </div>
       <div class="col-md-6 text-center  wow zoomIn animated" style="visibility: visible;">
@@ -148,6 +151,16 @@
           <i class="fa fa-google features-icon"></i>
           <h2>Зөвлөгөө</h2>
           <p>Мэргэжлийн инженерийн тооцоолол дээр үндэслэн танд хэрэгтэй зөвлөгөөг өгнө.</p>
+        </div>
+        <div>
+          <i class="fa fa-mobile features-icon"></i>
+          <h2>Загвар</h2>
+          <p>Мэргэжлийн архитекторын шийдлээр санал болгох загвар дизайн, өнгө будаг бүхий бүтээгдэхүүн.</p>
+        </div>
+        <div class="m-t-lg">
+          <i class="fa fa-bar-chart features-icon"></i>
+          <h2>Технологи</h2>
+          <p>Орчин үеийн тоног төхөөрөмжөөр мэргэжлийн инженер техникийн ажилтнууд зөвхөн танд зориулсан  бүтээгдэхүүнийг урлана.</p>
         </div>
       </div>
     </div>
@@ -248,41 +261,39 @@
           <p>мэдээлэл. </p>
         </div>
       </div>
-      <div class="row new-block">
-        <div class="row m-t-lg">
-          <div class="col-lg-12">
-            <div class="tabs-container">
-              <div class="tabs-left">
-                <ul class="nav nav-tabs">
-                  <% i = 0 %>
-                  <% @newses.each do |news| %>
-                    <% if i == 0 %>
-                      <% active = "active" %>
-                    <% end %>
-                    <li><a class="nav-link <%= active %>" data-toggle="tab" href="#tab-<%= i %>"> <%= news.title %></a></li>
-                    <% i = i + 1 %>
+      <div class="new-block row m-t-lg">
+        <div class="col-lg-12">
+          <div class="tabs-container">
+            <div class="tabs-left">
+              <ul class="nav nav-tabs">
+                <% i = 0 %>
+                <% @newses.each do |news| %>
+                  <% if i == 0 %>
+                    <% active = "active" %>
                   <% end %>
-                </ul>
-                <div class="tab-content">
-                  <% i = 0 %>
-                  <% @newses.each do |news| %>
-                    <% if i == 0 %>
-                      <% active = "active" %>
-                    <% end %>
-                    <div id="tab-<%= i %>" class="tab-pane <%= active %>">
-                      <div class="panel-body">
-                        <strong><%= news.title %></strong>
-                        <% if news.images.attached? %>
-                          <% news.images.each do |image| %>
-                            <%= image_tag(url_for(image), class: "img-fluid") %>
-                          <% end %>
+                  <li><a class="nav-link <%= active %>" data-toggle="tab" href="#tab-<%= i %>"> <%= news.title %></a></li>
+                  <% i = i + 1 %>
+                <% end %>
+              </ul>
+              <div class="tab-content">
+                <% i = 0 %>
+                <% @newses.each do |news| %>
+                  <% if i == 0 %>
+                    <% active = "active" %>
+                  <% end %>
+                  <div id="tab-<%= i %>" class="tab-pane <%= active %>">
+                    <div class="panel-body">
+                      <strong><%= news.title %></strong>
+                      <% if news.images.attached? %>
+                        <% news.images.each do |image| %>
+                          <%= image_tag(url_for(image), class: "img-fluid") %>
                         <% end %>
-                        <p><%= news.subject %></p>
-                      </div>
+                      <% end %>
+                      <p><%= news.subject %></p>
                     </div>
-                    <% i = i + 1 %>
-                  <% end %>
-                </div>
+                  </div>
+                  <% i = i + 1 %>
+                <% end %>
               </div>
             </div>
           </div>
@@ -327,7 +338,7 @@
       <div class="row m-b-lg justify-content-center">
         <div class="col-lg-3 ">
           <address>
-            <strong><span class="navy">Company name, Inc.</span></strong><br>
+            <strong><span class="navy">Guulin Dush, Inc.</span></strong><br>
             795 Folsom Ave, Suite 600<br>
             San Francisco, CA 94107<br>
             <abbr title="Phone">P:</abbr> (123) 456-7890
