add slider image

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -75,14 +75,14 @@
       <div class="carousel-item">
         <div class="container">
           <div class="carousel-caption blank">
-            <h1>We create meaningful <br> interfaces that inspire.</h1>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+            <h1 class="text-black-50">We create meaningful <br> interfaces that inspire.</h1>
+            <p class="text-black-50">Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+            <p class="text-black-50"><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
           </div>
         </div>
         <!-- Set background for slide in css -->
         <div class="header-back two">
-          <%= image_tag "landing/header_top_five.png" %>
+          <%= image_tag "landing/landing_top_three.jpg" %>
         </div>
       </div>
     </div>
