fix landing page

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -40,14 +40,11 @@
       <div class="carousel-item active">
         <div class="container">
           <div class="carousel-caption">
-            <h1>Уриа үг<br>
-              brands, web apps,<br>
-              and user interfaces<br>
-              we are IN+ studio</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing.</p>
+            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
+            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
             <p>
-              <a class="btn btn-lg btn-primary" href="#" role="button">READ MORE</a>
-              <a class="caption-link" href="#" role="button">Guulin Dush</a>
+              <a class="btn btn-lg btn-primary" href="" role="button">төмөр хийц</a>
+              <a class="caption-link" href="#" role="button">хөгжилрүү хамтдаа</a>
             </p>
           </div>
           <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
@@ -62,9 +59,12 @@
       <div class="carousel-item">
         <div class="container">
           <div class="carousel-caption blank">
-            <h1>We create meaningful <br> interfaces that inspire.</h1>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+            <h1>ЭРХЭМ ЗОРИЛГО <br></h1>
+            <p>Бид монгол хүмүүн, монгол баялаг,<br>
+               эрүүл аюулгүй ажиллагааг эрхэмлэж,<br>
+               хэрэглэгчдийнхээ итгэл найдварт түнш байж,<br>
+               Монгол улсынхаа хөгжилд хувь нэмрээ оруулсан<br>
+               шилдэг баялаг бүтээгч байгууллага болно.</p>
           </div>
         </div>
         <!-- Set background for slide in css -->
@@ -75,9 +75,12 @@
       <div class="carousel-item">
         <div class="container">
           <div class="carousel-caption blank">
-            <h1>We create meaningful <br> interfaces that inspire.</h1>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+            <h1>ҮНЭТ ЗҮЙЛ:<br></h1>
+            <p>• Багийн ажиллагаа<br>
+               • Бүтээлч сэтгэлгээ<br>
+               • Бүтээгдэхүүний чанар<br>
+               • Байгууллагын ёс зүй<br>
+               • Байнгын аюулгүй ажиллагаа</p>
           </div>
         </div>
         <!-- Set background for slide in css -->
@@ -101,16 +104,74 @@
       <div class="col-lg-12 text-center">
         <div class="navy-line"></div>
         <h1>Бидний тухай<br></h1>
-        <p>Орчин үеийн. Мэргэжлийн инженерийн тооцоолол. </p>
+        <p>Компанийн тухай</p>
       </div>
     </div>
     <div class="row">
       <p>
-        “Гуулин Дөш” ХХК нь анх 2007 онд төмөр хийцийн үйлдвэрлэл чиглэлээр байгуулагдаж, өдгөө 13 жилийн турш үйл ажиллагаагаа тасралтгүй явуулж байна.
-        Энэ хугацаанд хувь хүн болон албан байгууллагын захиалгын бүх төрлийн төмөр хийцийн ажлыг архитекторын зураг төсөв,
-        тооцоон дээр үндэслэн мэргэжлийн инженер техникийн ажилтнуудын ур чадвараар улс орны хөгжил цэцэглэлтэнд хувь нэмрээ оруулж,
-        олон сайхан нэр хүнд бүхий ажлуудыг амжилттай хийж гүйцэтгэж ирсэн.
+        “Гуулин Дөш” ХХК нь анх 2007 онд төмөр хийцийн үйлдвэрлэл чиглэлээр байгуулагдаж, өдгөө 13 жилийн турш<br>
+        үйл ажиллагаагаа тасралтгүй явуулж байна. Энэ хугацаанд хувь хүн болон албан байгууллагын захиалгын бүх<br>
+        төрлийн төмөр хийцийн ажлыг архитекторын зураг төсөв, тооцоон дээр үндэслэн мэргэжлийн инженер техникийн<br>
+        ажилтнуудын ур чадвараар улс орны хөгжил цэцэглэлтэнд хувь нэмрээ оруулж, олон сайхан нэр хүнд бүхий<br>
+        ажлуудыг амжилттай хийж гүйцэтгэж ирсэн.<br>
+        Бидэнтэй хамтарч  ажилладаг байгууллагууд болон хийж гүйцэтгэсэн ажлууд<br>
+        • "Засгийн газрын ордон"-ы 4 талын гүйдэг хаалга<br>
+        • "Их тэнгэр" цогцолборын гүйдэг төмөр хаалга<br>
+        • "Номин констракшн" ХХК-ийн<br>
+        • River Garden,<br>
+        • Garden city,<br>
+        • Time Square,<br>
+        • Casa Da Vinchi,<br>
+        • Цэцээ Гүн төслүүд дээр төмөр хийцийн ажлууд<br>
+        • "Бридж констракшн" ХХК-ийн сургуулиудын төмөр хийцийн ажлууд болон Эвридэй худалдааны төв-ийн төмөр карказан барилга<br>
+        • Оюу толгой<br>
+        • Энержи Ресурс ХХК<br>
+        • Баян Айраг эксплорейшн ХХК<br>
+        • И март худалдааны төв<br>
+        • “CU” сүлжээ дэлгүүр<br>
+        • Ган гүүр ХХК<br>
+        • M-Cи-Эс групп<br>
+        • Мobicom corporation<br>
+        • Mонголиан Стар Mелшерс гэх мэт<br>
+        Манай төмөр хийцийн үйлдвэрлэл нь хоногт 100-1300м2 бүтээгдэхүүн үйлдвэрлэх хүчин чадалтай ба бүх төрлийн энгийн болон<br>
+        гоёлын төмөр хаалга, хашаа, хайс, хашлага, цонхны хаалт, гадна тохижилтын бүтээгдэхүүнүүд мөн төмөр деталь хийцүүд хийж гүйцэтгэдэг.<br>
+        Манай компани нь архитектор-1, инженер техникийн ажилтан – 4, санхүү,<br>
+        захиргааны ажилтан – 5, туслах ажилчин - 5-10 хүний бүрэлдэхүүнтэйгээр үйл ажиллагаагаа явуулж байна.
       </p>
+    </div>
+  </section>
+
+  <section id="testimonials" class="navy-section " style="margin-top: 0">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center wow zoomIn animated" style="visibility: visible;">
+          <i class="fa fa-comment big-icon"></i>
+          <h1>Үйлчлүүлэгчид</h1>
+          <div class="testimonials-text">
+            <i>Бидэнтэй хамтарч  ажилладаг байгууллагууд</i>
+          </div>
+          <div class="ibox ">
+            <div class="lightBoxGallery">
+              <%= image_tag "partner/bayan_airag.jpg", style: "width: 100px; heigh: 100px;" %>
+              <%= image_tag "partner/bridge_construction.jpeg", style: "width: 100px; heigh: 100px;" %>
+              <%= image_tag "partner/cu.png", style: "width: 100px; heigh: 100px;" %>
+              <%= image_tag "partner/emart.png", style: "width: 100px; heigh: 100px;" %>
+              <%= image_tag "partner/energy_resource.jpg", style: "width: 100px; heigh: 100px;" %>
+              <%= image_tag "partner/ganguur.jpeg", style: "width: 100px; heigh: 100px;" %><br>
+              <%= image_tag "partner/garden_city.png", style: "width: 100px; heigh: 100px;" %>
+              <%= image_tag "partner/mcs.jpg", style: "width: 100px; heigh: 100px;" %>
+              <%= image_tag "partner/MobiCom logo.jpg", style: "width: 100px; heigh: 100px;" %>
+              <%= image_tag "partner/nomin.jpg", style: "width: 100px; heigh: 100px;" %>
+              <%= image_tag "partner/oyutolgoi.jpg", style: "width: 100px; heigh: 100px;" %>
+              <%= image_tag "partner/river_garden.jpeg", style: "width: 100px; heigh: 100px;" %>
+              <%= image_tag "partner/time_square.png", style: "width: 100px; heigh: 100px;" %>
+            </div>
+          </div>
+          <small>
+            <strong>13 - жилийн турш</strong>
+          </small>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -119,7 +180,7 @@
       <div class="col-lg-12 text-center">
         <div class="navy-line"></div>
         <h1>Биднийг сонгох шалтгаан<br> <span class="navy">+</span> </h1>
-        <p>Орчин үеийн. Мэргэжлийн инженерийн тооцоолол. </p>
+        <p>... </p>
       </div>
     </div>
     <div class="row">
@@ -127,14 +188,12 @@
         <div class="m-t-lg">
           <h2>Чанар</h2>
           <p>Бид чанар стандартын шаардлага хангасан түүхий эдээр бат бөх, баталгаат хугацаа бүхий бүтээгдэхүүн үйлдвэрлэнэ.</p>
-          <p><a class="navy-link" href="#" role="button">... »</a></p>
         </div>
         <div class="m-t-lg">
           <h2>Туршлага</h2>
           <p>Бид салбартаа 20-иод жилийн туршлагатай, анхдагч төмөр хийцийн үйлдвэрүүдийн нэг билээ.</p>
-          <p><a class="navy-link" href="#" role="button">... »</a></p>
         </div>
-        <div class="m-t-lg">
+        <div class="m-t-lg align-content-center">
           <h2>Итгэл найдвар</h2>
           <p>Бид бүтээгдэхүүнээ түргэн шуурхай гүйцэтгэж, таны итгэл найдвартай түнш, хамтрагч байж чадна.</p>
           <p><a class="navy-link" href="#" role="button">... »</a></p>
@@ -161,6 +220,7 @@
           <i class="fa fa-bar-chart features-icon"></i>
           <h2>Технологи</h2>
           <p>Орчин үеийн тоног төхөөрөмжөөр мэргэжлийн инженер техникийн ажилтнууд зөвхөн танд зориулсан  бүтээгдэхүүнийг урлана.</p>
+          <p><a class="navy-link" href="#" role="button">... »</a></p>
         </div>
       </div>
     </div>
@@ -172,7 +232,7 @@
         <div class="col-lg-12 text-center">
           <div class="navy-line"></div>
           <h1>Бүтээгдэхүүн</h1>
-          <p>бат бөх, баталгаат хугацаа бүхий бүтээгдэхүүн.</p>
+          <p>бат бөх, баталгаат хугацаатай</p>
         </div>
       </div>
       <div class="row">
@@ -204,8 +264,8 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <div class="navy-line"></div>
-          <h1>Хийж гүйцэтгэсэн ажлууд</h1>
-          <p>гүйцэтгэл. </p>
+          <h1>Гүйцэтгэл</h1>
+          <p>хийж гүйцэтгэсэн ажлууд</p>
         </div>
       </div>
       <div class="row features-block">
@@ -258,7 +318,7 @@
         <div class="col-lg-12 text-center">
           <div class="navy-line"></div>
           <h1>Мэдээ мэдээлэл</h1>
-          <p>мэдээлэл. </p>
+          <p>...</p>
         </div>
       </div>
       <div class="new-block row m-t-lg">
@@ -310,18 +370,11 @@
         <div class="col-lg-12 text-center">
           <div class="navy-line"></div>
           <h1>Нээлттэй ажлын байр</h1>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. </p>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. </p>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. </p>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. </p>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. </p>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. </p>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. </p>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. </p>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. </p>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. </p>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. </p>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. </p>
+          <br><br><br><br>
+          <strong>Та Гуулин Дөш ХХК-д нээлттэй ажлын байрны талаар <br>
+             мэдээлэл авах бол people.mobicom.mn хуудас руу шилжинэ үү.</strong>
+          <br><br><br><br>
+          <%= link_to "АНКЕТ ТАТАЖ АВАХ", "https://www.biznetwork.mn/company/guulin-dush?fbclid=IwAR0RcICOjKHGQ5RPhqQvZo0k2IL6fbPNIEFCskC33JdG5QX6yh-ON8AZ3WU", target: :_blank %>
         </div>
       </div>
     </div>
@@ -333,43 +386,42 @@
         <div class="col-lg-12 text-center">
           <div class="navy-line"></div>
           <h1>Бидэнтэй холбогдох</h1>
-          <p>хаяг.</p>
+          <p>хаяг</p>
         </div>
       </div>
       <div class="row m-b-lg justify-content-center">
         <div class="col-lg-3 ">
           <address>
             <strong><span class="navy">Guulin Dush, Inc.</span></strong><br>
-            795 Folsom Ave, Suite 600<br>
-            San Francisco, CA 94107<br>
-            <abbr title="Phone">P:</abbr> (123) 456-7890
+              Сонгинохайрхан дүүрэг,<br>
+              9-р хороо,<br>
+              УБ (Баянхошууны эцэст),<br>
+              Сонгинохайрхан дүүрэг ,<br>
+              Улаанбаатар хот Mongolia<br>
+            <abbr title="Phone">Утас:</abbr> 99106208, 99813884<br>
+            <abbr title="Email">И-мэйл:</abbr>  info@guulindush.mn
           </address>
         </div>
         <div class="col-lg-4">
           <p class="text-color">
-            Consectetur adipisicing elit. Aut eaque, totam corporis laboriosam veritatis quis ad perspiciatis, totam corporis laboriosam veritatis, consectetur adipisicing elit quos non quis ad perspiciatis, totam corporis ea,
           </p>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-12 text-center">
-          <a href="mailto:test@email.com" class="btn btn-primary">Send us mail</a>
+          <a href="mailto:test@email.com" class="btn btn-primary">Бидэнд мэйл илгээх</a>
           <p class="m-t-sm">
-            Or follow us on social platform
+            Олон нийтийн сүлжээнд биднийг дагаж байгаад танд баярлалаа
           </p>
           <ul class="list-inline social-icon">
-            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a>
-            </li>
-            <li class="list-inline-item"><a href="#"><i class="fa fa-facebook"></i></a>
-            </li>
-            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a>
-            </li>
+            <li class="list-inline-item"><a href="https://www.facebook.com/GuulinDush.Tumurhiits/?__tn__=%2Cd%2CP-R&eid=ARD5kTGxGetW_7mlPzBri4lkeT1AGOeVZqMZJSSxy8rJOqx6xkNccQydfLDJZjI_bGnJsHabw_p5tFh-" target="_blank"><i class="fa fa-facebook"></i></a></li>
+            <li class="list-inline-item"><a href="https://twitter.com/guulindush/" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
           </ul>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-12 text-center m-t-lg m-b-lg">
-          <p><strong>© 2020 Sagi Sama</strong><br> consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+          <p>© 2020 Sagi Sama</p>
         </div>
       </div>
     </div>
@@ -377,3 +429,9 @@
 </body>
 
 <%= javascript_pack_tag 'top/index' %>
+<style>
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+</style>
