--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,3 +1,5 @@
 @import "~bootstrap";
 @import "animate";
 @import "style";
+$fa-font-path: "font-awesome/fonts";
+@import 'font-awesome/scss/font-awesome';
