--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -230,31 +230,29 @@
           <h1><i>Хийсэн ажлууд</i></h1><br>
         </div>
       </div>
-      <div class="row gray-bg wow fadeInRightBig animated">
-        <div class="col-lg-12"><br>
-          <% @performances.each do |performance| %>
-            <div class="col-md-4">
-              <div class="ibox ">
-                <div class="ibox-title">
-                  <h5><i><%= performance.title %></i></h5>
-                </div>
-                <div>
-                  <div class="ibox-content no-padding border-left-right">
-                    <% if performance.images.attached? %>
-                      <% performance.images.each do |image| %>
-                        <%= image_tag(url_for(image), style: "width:100%; height:100%;") %>
-                      <% end %>
+      <div class="row wow fadeInRightBig animated">
+        <% @performances.each do |performance| %>
+          <div class="col-sm">
+            <div class="ibox border">
+              <div class="ibox-title">
+                <h5><i><%= performance.title %></i></h5>
+              </div>
+              <div>
+                <div class="ibox-content no-padding border-left-right">
+                  <% if performance.images.attached? %>
+                    <% performance.images.each do |image| %>
+                      <%= image_tag(url_for(image), style: "width:100%; height:100%;") %>
                     <% end %>
-                  </div>
-                  <div class="ibox-content profile-content">
-                    <p><i class="fa fa-calendar-times-o"></i><i><%= performance.period %></i></p>
-                    <h5><i><%= performance.subject %></i></h5>
-                  </div>
+                  <% end %>
+                </div>
+                <div class="ibox-content profile-content">
+                  <p><i class="fa fa-calendar"></i><i> <%= performance.period %></i></p>
+                  <h5><i><%= performance.subject %></i></h5>
                 </div>
               </div>
             </div>
-          <% end %>
-        </div>
+          </div>
+        <% end %>
       </div>
     </div>
   </section>
