--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -53,7 +53,7 @@
         </div>
         <!-- Set background for slide in css -->
         <div class="header-back one">
-          <%= image_tag "landing/header_top_one.jpg" %>
+          <%= image_tag "landing/header_2.jpg" %>
         </div>
       </div>
       <div class="carousel-item">
@@ -69,7 +69,7 @@
         </div>
         <!-- Set background for slide in css -->
         <div class="header-back two">
-          <%= image_tag "landing/header_top_five.png" %>
+          <%= image_tag "landing/header_1.jpg" %>
         </div>
       </div>
       <div class="carousel-item">
@@ -85,7 +85,7 @@
         </div>
         <!-- Set background for slide in css -->
         <div class="header-back two">
-          <%= image_tag "landing/landing_top_three.jpg" %>
+          <%= image_tag "landing/header_3.jpg" %>
         </div>
       </div>
     </div>
