fix header images to choose

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -20,7 +20,7 @@
             <li><a class="nav-link page-scroll active" href="#page-top">Нүүр</a></li>
             <li><a class="nav-link page-scroll" href="#aboutus">Бидний тухай</a></li>
             <li><a class="nav-link page-scroll" href="#product">Бүтээгдэхүүн</a></li>
-            <li><a class="nav-link page-scroll" href="#performance">гүйцэтгэл</a></li>
+            <li><a class="nav-link page-scroll" href="#performance">Хийсэн ажлууд</a></li>
             <li><a class="nav-link page-scroll" href="#news">Мэдээ мэдээлэл</a></li>
             <li><a class="nav-link page-scroll" href="#workplace">ажлын байр</a></li>
             <li><a class="nav-link page-scroll" href="#contact">Холбоо барих</a></li>
@@ -34,7 +34,19 @@
     <ol class="carousel-indicators">
       <li data-target="#inSlider" data-slide-to="0" class="active"></li>
       <li data-target="#inSlider" data-slide-to="1" class=""></li>
-      <li data-target="#inSlider" data-slide-to="2" class=""></li>
+      <li data-target="#inSlider" data-slide-to="3" class=""></li>
+      <li data-target="#inSlider" data-slide-to="4" class=""></li>
+      <li data-target="#inSlider" data-slide-to="5" class=""></li>
+      <li data-target="#inSlider" data-slide-to="6" class=""></li>
+      <li data-target="#inSlider" data-slide-to="7" class=""></li>
+      <li data-target="#inSlider" data-slide-to="8" class=""></li>
+      <li data-target="#inSlider" data-slide-to="9" class=""></li>
+      <li data-target="#inSlider" data-slide-to="10" class=""></li>
+      <li data-target="#inSlider" data-slide-to="11" class=""></li>
+      <li data-target="#inSlider" data-slide-to="12" class=""></li>
+      <li data-target="#inSlider" data-slide-to="13" class=""></li>
+      <li data-target="#inSlider" data-slide-to="14" class=""></li>
+      <li data-target="#inSlider" data-slide-to="15" class=""></li>
     </ol>
     <div class="carousel-inner" role="listbox">
       <div class="carousel-item active">
@@ -48,7 +60,22 @@
             </p>
           </div>
           <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
-            <%= image_tag "landing/blacksmith.png" %>
+            <%= image_tag "landing/smit_header.jpg" %>
+          </div>
+        </div>
+        <!-- Set background for slide in css -->
+        <div class="header-back one">
+          <%= image_tag "landing/header_1.png" %>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
+            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
+          </div>
+          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
+            <%= image_tag "landing/blacksmith2.jpeg" %>
           </div>
         </div>
         <!-- Set background for slide in css -->
@@ -58,34 +85,197 @@
       </div>
       <div class="carousel-item">
         <div class="container">
-          <div class="carousel-caption blank">
-            <h1>ЭРХЭМ ЗОРИЛГО <br></h1>
-            <p>Бид монгол хүмүүн, монгол баялаг,<br>
-               эрүүл аюулгүй ажиллагааг эрхэмлэж,<br>
-               хэрэглэгчдийнхээ итгэл найдварт түнш байж,<br>
-               Монгол улсынхаа хөгжилд хувь нэмрээ оруулсан<br>
-               шилдэг баялаг бүтээгч байгууллага болно.</p>
+          <div class="carousel-caption">
+            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
+            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
+          </div>
+          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
+            <%= image_tag "landing/blacksmith3.png" %>
           </div>
         </div>
         <!-- Set background for slide in css -->
-        <div class="header-back two">
-          <%= image_tag "landing/header_1.jpg" %>
+        <div class="header-back one">
+          <%= image_tag "landing/header_3.jpg" %>
         </div>
       </div>
       <div class="carousel-item">
         <div class="container">
-          <div class="carousel-caption blank">
-            <h1>ҮНЭТ ЗҮЙЛ:<br></h1>
-            <p>• Багийн ажиллагаа<br>
-               • Бүтээлч сэтгэлгээ<br>
-               • Бүтээгдэхүүний чанар<br>
-               • Байгууллагын ёс зүй<br>
-               • Байнгын аюулгүй ажиллагаа</p>
+          <div class="carousel-caption">
+            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
+            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
+          </div>
+          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
+            <%= image_tag "landing/blacksmith4.png" %>
           </div>
         </div>
         <!-- Set background for slide in css -->
-        <div class="header-back two">
-          <%= image_tag "landing/header_3.jpg" %>
+        <div class="header-back one">
+          <%= image_tag "landing/header_4.jpg" %>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
+            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
+          </div>
+          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
+            <%= image_tag "landing/blacksmith5.png" %>
+          </div>
+        </div>
+        <!-- Set background for slide in css -->
+        <div class="header-back one">
+          <%= image_tag "landing/header_top_one.jpg" %>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
+            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
+          </div>
+          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
+            <%= image_tag "landing/blacksmith6.jpg" %>
+          </div>
+        </div>
+        <!-- Set background for slide in css -->
+        <div class="header-back one">
+          <%= image_tag "landing/header_top_two.jpg" %>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
+            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
+          </div>
+          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
+            <%= image_tag "landing/blacksmith3.png" %>
+          </div>
+        </div>
+        <!-- Set background for slide in css -->
+        <div class="header-back one">
+          <%= image_tag "landing/header_top_five.png" %>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
+            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
+          </div>
+          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
+            <%= image_tag "landing/blacksmith3.png" %>
+          </div>
+        </div>
+        <!-- Set background for slide in css -->
+        <div class="header-back one">
+          <%= image_tag "landing/header1.png" %>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
+            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
+          </div>
+          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
+            <%= image_tag "landing/blacksmith4.png" %>
+          </div>
+        </div>
+        <!-- Set background for slide in css -->
+        <div class="header-back one">
+          <%= image_tag "landing/header2.jpg" %>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
+            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
+          </div>
+          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
+            <%= image_tag "landing/blacksmith3.png" %>
+          </div>
+        </div>
+        <!-- Set background for slide in css -->
+        <div class="header-back one">
+          <%= image_tag "landing/header3.jpg" %>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
+            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
+          </div>
+          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
+            <%= image_tag "landing/blacksmith3.png" %>
+          </div>
+        </div>
+        <!-- Set background for slide in css -->
+        <div class="header-back one">
+          <%= image_tag "landing/header4.jpg" %>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
+            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
+          </div>
+          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
+            <%= image_tag "landing/blacksmith3.png" %>
+          </div>
+        </div>
+        <!-- Set background for slide in css -->
+        <div class="header-back one">
+          <%= image_tag "landing/header5.jpg" %>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
+            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
+          </div>
+          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
+            <%= image_tag "landing/blacksmith5.png" %>
+          </div>
+        </div>
+        <!-- Set background for slide in css -->
+        <div class="header-back one">
+          <%= image_tag "landing/header6.png" %>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
+            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
+          </div>
+          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
+            <%= image_tag "landing/smit_header.jpg" %>
+          </div>
+        </div>
+        <!-- Set background for slide in css -->
+        <div class="header-back one">
+          <%= image_tag "landing/smit_header.jpg" %>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
+            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
+          </div>
+          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
+            <%= image_tag "landing/blacksmith_dr.jpg" %>
+          </div>
+        </div>
+        <!-- Set background for slide in css -->
+        <div class="header-back one">
+          <%= image_tag "landing/blacksmith_pop.jpg" %>
         </div>
       </div>
     </div>
@@ -279,7 +469,7 @@
                   <% i = i + 1 %>
                 <% end %>
               </ul>
-              <div class="tab-content text-center">
+              <div class="tab-content">
                 <% i = 0 %>
                 <% @newses.each do |news| %>
                   <% if i == 0 %>
@@ -287,13 +477,23 @@
                   <% end %>
                   <div id="tab-<%= i %>" class="tab-pane <%= active %>">
                     <div class="panel-body">
-                      <p><i><h2><%= news.title %></h2></i></p>
-                      <% if news.images.attached? %>
-                        <% news.images.each do |image| %>
-                          <%= image_tag(url_for(image), class: "img-fluid") %>
-                        <% end %>
-                      <% end %>
-                      <p><i><%= news.subject %></i></p>
+                      <div class="row">
+                        <div class="col-md-4">
+                          <div class="thumbnail">
+                            <a href="">
+                              <% if news.images.attached? %>
+                                <% news.images.each do |image| %>
+                                  <%= image_tag(url_for(image), style: "width:100%;") %>
+                                <% end %>
+                              <% end %>
+                            </a>
+                          </div>
+                        </div>
+                        <div class="col-md-8 text-center">
+                          <h3><i><%= news.title %></i></h3>
+                          <i><%= news.subject %></i>
+                        </div>
+                      </div>
                     </div>
                   </div>
                   <% i = i + 1 %>
